make it work with official ZATCA app

--- a/GeeSuthSoft.KSA.ZATCA/GeeSuthSoft.KSA.ZATCA/GeeSuthSoft.KSA.ZATCA.csproj
+++ b/GeeSuthSoft.KSA.ZATCA/GeeSuthSoft.KSA.ZATCA/GeeSuthSoft.KSA.ZATCA.csproj
@@ -49,12 +49,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Enums\Options.cs" />
-    <Compile Include="Models\QrContent.cs" />
+    <Compile Include="Ext\HexExtasion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Qr\Qr.cs" />
     <Compile Include="Qr\QrCodeGenerate.cs" />
     <Compile Include="Qr\QrCodeOption.cs" />
-    <Compile Include="Qr\QrHelper.cs" />
-    <Compile Include="TLV\Tag.cs" />
+    <Compile Include="Tags\UseTag.cs" />
+    <Compile Include="Tags\ITag.cs" />
+    <Compile Include="TLV\Tlv.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
