--- a/src/New/GeeSuthSoft.KSA.ZATCA/GeeSuthSoft.KSA.ZATCA.csproj
+++ b/src/New/GeeSuthSoft.KSA.ZATCA/GeeSuthSoft.KSA.ZATCA.csproj
@@ -12,6 +12,7 @@
 	<FileVersion>7.0</FileVersion>
 	<Version>7.0</Version>
 	<Title>KSA ZATCA</Title>
+	<PackageTags>KSA, ZATCA,GEESUTH,fattora, Saudi Arabia</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
