--- a/src/GeeSuthSoft.KSA.ZATCA/GeeSuthSoft.KSA.ZATCA.csproj
+++ b/src/GeeSuthSoft.KSA.ZATCA/GeeSuthSoft.KSA.ZATCA.csproj
@@ -24,6 +24,8 @@
     <PackageReference Include="QRCoder" Version="1.4.2" />
     <PackageReference Include="System.Drawing.Common" Version="8.0.0" />
     <PackageReference Include="System.Security.Cryptography.Xml" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
   </ItemGroup>
 	<ItemGroup>
 		<InternalsVisibleTo Include="GeeSuthSoft.KSA.ZATCA.XunitTest"/>
