--- a/.github/workflows/nuget-publish.yml
+++ b/.github/workflows/nuget-publish.yml
@@ -23,13 +23,13 @@ jobs:
           echo "VERSION=$VERSION" >> $GITHUB_ENV
 
       - name: Restore dependencies
-        run: dotnet restore
+        run: dotnet restore ./src/GeeSuthSoft.KSA.ZATCA/GeeSuthSoft.KSA.ZATCA.csproj
 
       - name: Build
-        run: dotnet build --configuration Release --no-restore
+        run: dotnet build ./src/GeeSuthSoft.KSA.ZATCA/GeeSuthSoft.KSA.ZATCA.csproj --configuration Release --no-restore
 
       - name: Pack NuGet package
-        run: dotnet pack --configuration Release --no-build -o ./artifacts /p:PackageVersion=${{ env.VERSION }}
+        run: dotnet pack ./src/GeeSuthSoft.KSA.ZATCA/GeeSuthSoft.KSA.ZATCA.csproj --configuration Release --no-build -o ./artifacts /p:PackageVersion=${{ env.VERSION }}
 
       - name: Publish to NuGet
         run: dotnet nuget push ./artifacts/*.nupkg --api-key ${{ secrets.NUGETAPIKEY }} --source https://api.nuget.org/v3/index.json
